--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,30 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="activity_horizontal_padding">8dp</dimen>
+    <dimen name="activity_vertical_padding">8dp</dimen>
+
+    <dimen name="action_horizontal_padding">8dp</dimen>
+    <dimen name="action_vertical_padding">8dp</dimen>
+
+    <dimen name="card_horizontal_padding">16dp</dimen>
+    <dimen name="card_vertical_padding">16dp</dimen>
+
+    <dimen name="list_item_horizontal_padding">16dp</dimen>
+    <dimen name="list_item_vertical_padding">16dp</dimen>
+
+    <dimen name="arcStrokeWidth">4dp</dimen>
+
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_elevation">8dp</dimen>
+    <dimen name="fab_elevation_pressed">12dp</dimen>
+
+    <dimen name="card_corner_radius">2dp</dimen>
+    <dimen name="card_elevation">4dp</dimen>
+
+    <dimen name="button_min_height">54dp</dimen>
+
+    <dimen name="server_list_item_content_height">150dp</dimen>
+    <dimen name="server_detail_list_backdrop_height">200dp</dimen>
 </resources>
