--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="transparent">#00000000</color>
+    <color name="background">@color/white_secondary</color>
 
-    <color name="primary">#0277BD</color>
-    <color name="primary_bright">#039BE5</color>
-    <color name="primary_dark">#01579B</color>
+    <color name="primary">#1E2020</color>
+    <color name="primary_bright">#303333</color>
+    <color name="primary_dark">#181A1A</color>
 
     <color name="dark_primary">#1E2020</color>
-    <color name="dark_primary_bright">#2f3333</color>
-    <color name="dark_primary_dark">#131414</color>
+    <color name="dark_primary_bright">#303333</color>
+    <color name="dark_primary_dark">#181A1A</color>
 
-    <color name="accent">#FF3D00</color>
-    <color name="accent_bright">#FF9E80</color>
-    <color name="accent_dark">#DD2C00</color>
+    <color name="accent">#4CB5B8</color>
+    <color name="accent_bright">#48ABAD</color>
+    <color name="accent_dark">#409799</color>
 
     <color name="error">#F44336</color>
     <color name="warning">#FF9800</color>
